Произвел рефакторинг нейминга.